[tool.poetry]
name = "pds-compliance"
version = "0.0.1"
description = ""
authors = [
	"Mario Alviano <mario.alviano@gmail.com>",
	"ainnoot <ai6chr+github@gmail.com>"
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
frozendict = "^2.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
