[tool.poetry]
name = "pds-compliance"
version = "0.0.3"
description = ""
authors = [
	"Mario Alviano <mario.alviano@gmail.com>",
	"ainnoot <ai6chr+github@gmail.com>"
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
frozendict = "^2.4.4"
declasp = {git = "https://github.com/ainnoot/declasp.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
