[tool.poetry]
name = "pds-compliance"
version = "0.1.0"
description = ""
authors = [
	"Mario Alviano <mario.alviano@gmail.com>",
	"Antonio Ielo <antonio.ielo@unical.it>"
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
frozendict = "^2.4.4"
declasp = {git = "https://github.com/ainnoot/declasp"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[tool.poetry.scripts]
pds-declare-compliance = "pds_compliance:cli.main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
